@@ -1,3 +1,7 @@
+2007-01-10  Douglas Bates  <bates@r-project.org>
+
+	* R/lmer.R (mcmcsamp): Add 'deviance' argument for mcmcsamp method.
+
 2006-12-13  Douglas Bates  <bates@stat.wisc.edu>
 
 	* src/lmer.[ch],init.c (mer2_setPars): Added mer2 extractors.
